2006-09-14  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcurvestool.c (curves_graph_events): when editing a
	"smooth" curve, update the image while dragging instead of on
	button_release. Suggested by Joel Becker.

2006-09-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/gtkcons.py: use gtk.CLOSE instead of
	"Close" to clarify why this string doesn't need to be marked for
	translation.

2006-09-14  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollereditor.[ch]
	* app/widgets/gimpcontrollerlist.c: pass a GimpContext to
	gimp_viewable_dialog_new().

2006-09-14  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/dialogs/preferences-dialog.c
	* app/tools/gimpvectortool.c
	* app/widgets/gimpcontrollereditor.c: 
	* plug-ins/common/autocrop.c
	* plug-ins/common/max_rgb.c: resolved conflicting mnemonics, added
	some new ones (bug #355761).

2006-09-14  Jakub Steiner <jimmac@ximian.com>

	* themes/.../help-system.png:
	* themes/.../help-system-22.png: update to the tango styling.

2006-09-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: marked strings for translation.

2006-09-14  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-open-location-dialog.c: set a context on the
	GimpContainerEntry.

2006-09-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerentry.c: Don't popup the completion
	when there is only a single match because we already use inline
	completion.

2006-09-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerentry.c: implement
	GimpContainerView::set_context() and set the renderers'	contexts.
	Fixes more preview rendering warnings.  Connect to
	GtkEntryCompletion::match-selected in addition to GtkEntry::changed
	to select the active item. Makes the whole thing work a lot better.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	Need to be more careful with setting a tool's focus_dislay now
	that tools can receive modifier events in more circumstances