@@ -30,7 +30,8 @@ typedef enum
   GIMP_RECTANGLE_OPTIONS_PROP_FIXED_HEIGHT,
   GIMP_RECTANGLE_OPTIONS_PROP_HEIGHT,
   GIMP_RECTANGLE_OPTIONS_PROP_FIXED_ASPECT,
-  GIMP_RECTANGLE_OPTIONS_PROP_ASPECT,
+  GIMP_RECTANGLE_OPTIONS_PROP_ASPECT_NUMERATOR,
+  GIMP_RECTANGLE_OPTIONS_PROP_ASPECT_DENOMINATOR,
   GIMP_RECTANGLE_OPTIONS_PROP_ASPECT_SQUARE,
   GIMP_RECTANGLE_OPTIONS_PROP_FIXED_CENTER,
   GIMP_RECTANGLE_OPTIONS_PROP_CENTER_X,
